--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,21 +30,27 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="255dp"
-        android:layout_height="237dp"
+        android:layout_width="262dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="312dp"
-        tools:srcCompat="@tools:sample/avatars[2]" />
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="294dp"
+        android:src="@drawable/logo" />
 
     <Button
         android:id="@+id/login_btn"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="196dp"
         android:layout_height="60dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="102dp"
         android:layout_marginEnd="113dp"
         android:layout_marginBottom="180dp"
         android:text="@string/login"
