--- a/app/src/main/res/layout/users_list_layout.xml
+++ b/app/src/main/res/layout/users_list_layout.xml
@@ -7,10 +7,10 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/dp"
-        android:layout_width="85dp"
-        android:layout_height="97dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="95dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         android:src="@drawable/profile" />
 
     <EditText
@@ -20,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="223dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="189dp"
         android:editable="false"
         android:fontFamily="@font/aref_ruqaa"
         android:text="User Name"
@@ -35,13 +35,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="79dp"
+        android:layout_marginStart="110dp"
         android:layout_marginTop="56dp"
         android:editable="false"
         android:fontFamily="@font/aref_ruqaa"
         android:text="Current Status"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/button_add_friend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="290dp"
+        android:layout_marginTop="9dp"
+        android:text="Add Friend" />
 
 
 </RelativeLayout>
