--- a/app/src/main/res/layout/users_list_layout.xml
+++ b/app/src/main/res/layout/users_list_layout.xml
@@ -21,10 +21,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="9dp"
-        android:layout_marginEnd="189dp"
+        android:layout_marginEnd="181dp"
         android:editable="false"
         android:fontFamily="@font/aref_ruqaa"
         android:text="User Name"
+        android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="20dp" />
@@ -35,21 +36,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="110dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="56dp"
         android:editable="false"
         android:fontFamily="@font/aref_ruqaa"
-        android:text="Current Status"
+        android:text="@string/current_status"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="20dp" />
-
-    <Button
-        android:id="@+id/button_add_friend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="290dp"
-        android:layout_marginTop="9dp"
-        android:text="Add Friend" />
 
 
 </RelativeLayout>
