--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Chat">
+    tools:context=".ChatActivity">
 
 
     <include
@@ -50,6 +50,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/friends_heading" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabRequests"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/requests" />
 
     </com.google.android.material.tabs.TabLayout>
 
