--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="button" parent="@android:style/Widget.Button">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:textColor">@color/common_google_signin_btn_text_light_focused</item>
+        <item name="android:shadowColor">#FF000000</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">-1</item>
+        <item name="android:shadowRadius">0.2</item>
+<!--        <item name="android:textSize">16dip</item>-->
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/custom_btn</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="contrast_button" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/button_contrast</item>
+    </style>
+
 </resources>
