--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,106 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".ChatActivity">
-
+    android:background="@android:color/darker_gray"
+    tools:context="com.cmpe277.chatterbox.ChatActivity">
 
     <include
-        android:id="@+id/chat_tool_bar"
-        layout="@layout/app_bar"
-        android:layout_width="411dp"
-        android:layout_height="62dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="63dp" />
+        android:id="@+id/chat_toolbar"
+        layout="@layout/app_bar">
+    </include>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabBar"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/private_messages_list_of_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/chat_toolbar">
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <LinearLayout
+        android:id="@+id/chat_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chat_tool_bar"
-        app:layout_constraintBottom_toTopOf="@+id/viewPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:tabSelectedTextColor="@color/colorAccent">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/background_light"
+        android:orientation="horizontal">
 
+        <EditText
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabChat"
-            android:layout_width="296dp"
-            android:layout_height="83dp"
-            android:text="@string/chat_heading"
-            tools:layout_editor_absoluteX="67dp"
-            tools:layout_editor_absoluteY="648dp" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabStatus"
-            android:layout_width="wrap_content"
+            android:id="@+id/input_message"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
-            android:text="@string/status_heading" />
+            android:hint="type message here..."
+            android:padding="15dp"/>
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabFriends"
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/send_message_btn"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:text="@string/friends_heading" />
+            android:src="@drawable/send_message"/>
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabRequests"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/requests" />
+    </LinearLayout>
 
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="418dp"
-        android:layout_height="545dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-    </androidx.viewpager.widget.ViewPager>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</RelativeLayout>
