--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#7308B9</color>
     <color name="colorAccent">#E8D0D0</color>
     <color name="colorContrast">#2680Ea</color>
+    <color name="light_purple">#E8E1E7</color>
+    <color name="black">#000000</color>
+    <color name="green">#27AE60</color>
+    <color name="light_green">#50d050</color>
 </resources>
