Add logic to show image in profile view

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,6 +37,7 @@
         android:fontFamily="@font/aref_ruqaa"
         android:gravity="center"
         android:text="@string/profile_name"
+        android:layout_below="@+id/profile_pic"
         android:textColor="@color/colorAccent"
         android:textSize="24sp" />
 
